k8s/codeprojectai/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeprojectai-ingress
  namespace: dvr
spec:
  ingressClassName: nginx
  rules:
  - host: codeprojectai.local.koryalbert.net
    http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codeproject-ai
                port:
                  number: 32168
